// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package articlerpc;

// 生成 golang 代码后的包名
option go_package = "./articlerpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}

message IdsReq {
  repeated int64 ids = 1;
}

message BatchResp {
  int64 success_count = 1;
}

message CountResp {
  int64 count = 1;
}

message UserIdReq {
  int64 user_id = 1;
}

/************** article 相关 **************/

// article结构体
message ArticleNew {
  int64 id = 1;// id
  int64 user_id = 2;// 作者
  //  int64 category_id = 3;// 文章分类
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  string article_content = 6;// 内容
  int64 article_type = 7;// 文章类型 1原创 2转载 3翻译
  string original_url = 8;// 原文链接
  //  int64 is_top = 9;// 是否置顶 0否 1是
  //  int64 is_delete = 10;// 是否删除  0否 1是
  int64 status = 11;// 状态值 1公开 2私密 3评论可见
  //  int64 created_at = 12;// 发表时间
  //  int64 updated_at = 13;// 更新时间
  //  int64 like_count = 14;// 点赞数
  string category_name = 15;// 分类名
  repeated string tag_name_list = 16; // 标签名
}

message ArticleDetails {
  int64 id = 1;// id
  int64 user_id = 2;// 作者
  int64 category_id = 3;// 文章分类
  string article_cover = 4;// 文章缩略图
  string article_title = 5;// 标题
  string article_content = 6;// 内容
  int64 article_type = 7;// 文章类型 1原创 2转载 3翻译
  string original_url = 8;// 原文链接
  int64 is_top = 9;// 是否置顶 0否 1是
  int64 is_delete = 10;// 是否删除  0否 1是
  int64 status = 11;// 状态值 1公开 2私密 3评论可见
  int64 created_at = 12;// 发表时间
  int64 updated_at = 13;// 更新时间
  int64 like_count = 14;// 点赞数
  ArticleCategory category = 15; // 分类
  repeated ArticleTag tag_list = 16; // 标签
}

message ArticleCategory {
  int64 id = 1;// id
  string category_name = 2;// 分类名
}

message ArticleTag{
  int64 id = 1;// id
  string tag_name = 2;// 标签名
}

message RecycleArticleReq{
  int64 article_id = 1;
  int64 is_delete = 2;// 是否删除  0否 1是
}

message TopArticleReq{
  int64 article_id = 1;
  int64 is_top = 2;// 是否置顶 0否 1是
}

message FindArticleListReq{
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
  string conditions = 4; // 条件
  repeated string args = 5; // 参数
}

message FindArticlesByTagReq{
  string tag_name = 2;// 标签名
}

message FindArticlesByCategoryReq{
  string category_name = 2;// 分类名
}

message FindArticleListResp {
  int64 total = 1;
  repeated ArticleDetails list = 2;
}

message FindLikeArticleResp{
  repeated int64 like_article_list = 1;
}

message CategoryNew{
  int64 id = 1;// id
  string category_name = 2;// 分类名
}

message CategoryDetails {
  int64 id = 1;// id
  string category_name = 2;// 分类名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
  int64 article_count = 5;// 文章数量
}

message FindCategoryListReq{
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
  string category_name = 4;
}

message FindCategoryListResp {
  int64 total = 1;
  repeated CategoryDetails list = 2;
}

message TagNew {
  int64 id = 1;// id
  string tag_name = 2;// 标签名
}

message TagDetails {
  int64 id = 1;// id
  string tag_name = 2;// 标签名
  int64 created_at = 3;// 创建时间
  int64 updated_at = 4;// 更新时间
  int64 article_count = 5;// 文章数量
}

message FindTagListReq{
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
  string tag_name = 4;// 标签名
}

message FindTagListResp {
  int64 total = 1;
  repeated TagDetails list = 2;
}

message AnalysisArticleResp{
  int64 article_count = 1;
  int64 category_count = 2;
  int64 tag_count = 3;
}

// article服务
service ArticleRpc {
  // 创建文章
  rpc AddArticle(ArticleNew) returns(ArticleDetails);
  // 更新文章
  rpc UpdateArticle(ArticleNew) returns(ArticleDetails);
  // 查询文章
  rpc GetArticle(IdReq) returns(ArticleDetails);
  // 删除文章
  rpc DeleteArticle(IdsReq) returns(BatchResp);
  // 查询文章列表
  rpc FindArticleList(FindArticleListReq) returns(FindArticleListResp);
  // 查询文章列表
  rpc FindArticlePublicList(FindArticleListReq) returns(FindArticleListResp);
  // 查询文章列表
  rpc FindArticlesByTag(FindArticlesByTagReq) returns(FindArticleListResp);
  // 查询文章列表
  rpc FindArticlesByCategory(FindArticlesByCategoryReq) returns(FindArticleListResp);
  // 回收文章
  rpc RecycleArticle(RecycleArticleReq) returns(EmptyResp);
  // 置顶文章
  rpc TopArticle(TopArticleReq) returns(EmptyResp);

  // 点赞文章
  rpc LikeArticle(IdReq) returns(EmptyResp);
  // 用户点赞的文章
  rpc FindUserLikeArticle(UserIdReq) returns(FindLikeArticleResp);

  // 查询文章数量
  rpc AnalysisArticle(EmptyReq) returns(AnalysisArticleResp);

  // 创建文章分类
  rpc AddCategory(CategoryNew) returns(CategoryDetails);
  // 更新文章分类
  rpc UpdateCategory(CategoryNew) returns(CategoryDetails);
  // 查询文章分类
  rpc GetCategory(IdReq) returns(CategoryDetails);
  // 删除文章分类
  rpc DeleteCategory(IdsReq) returns(BatchResp);
  // 查询文章分类列表
  rpc FindCategoryList(FindCategoryListReq) returns(FindCategoryListResp);

  // 创建标签
  rpc AddTag(TagNew) returns(TagDetails);
  // 更新标签
  rpc UpdateTag(TagNew) returns(TagDetails);
  // 查询标签
  rpc GetTag(IdReq) returns(TagDetails);
  // 删除标签
  rpc DeleteTag(IdsReq) returns(BatchResp);
  // 查询标签列表
  rpc FindTagList(FindTagListReq) returns(FindTagListResp);
}
